Added steps to the recipe page, as well as ingriedients

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -11,5 +11,30 @@
     <h2>
         Worlds's Best Lasagna
     </h2>
+    <p>
+        This lasagna recipe takes a little work, but it is so satisfying and filling that it's worth it!
+    </p>
+    <h2>
+        Ingredients
+    </h2>
+    <ul>
+        <li>Meat</li>
+        <li>Onion and garlic</li>
+        <li>Tomato products</li>
+        <li>Sugar</li>
+        <li>Spices and seasonings</li>
+        <li>Lasagna noodles</li>
+        <li>Cheese</li>
+        <li>Egg</li>
+    </ul>
+    <h2>How to make Lasagna Step-By-Step</h2>
+    <ol>
+        <li>Make the meat sauce.</li>
+        <li>Cook the noodles.</li>
+        <li>Make the ricotta mixture.</li>
+        <li>Layer the lasagna according to the recipe instructions.</li>
+        <li>Cover with foil and bake.</li>
+        <li>Let the lasagna rest before serving.</li>
+    </ol>
 </body>
 </html>
